# campus-

./: pyproject.toml
campus/: asgi.py  settings.py  urls.py  wsgi.py
campus/core/: admin.py  apps.py  forms.py  models.py  views.py
campus/core/migrations/: 0001_initial.py  0002_course_alter_user_course.py  0003_alter_academicinfo_options_alter_course_options_and_more.py  0004_alter_document_status.py  0005_document_file.py
