[tool.poetry]
name = "campus-"
version = "0.1.0"
description = ""
authors = ["Lucas Alves <sociallucasalves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.2"
django-jazzmin = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
